lab-01/app-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: quarkus-petclinic
  labels:
    app: quarkus-petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-petclinic
  template:
    metadata:
      labels:
        app: quarkus-petclinic
        deployment: quarkus-petclinic
    spec:
      containers:
        - name: quarkus-petclinic
          # Esto funciona-----
          #image: 'quay.io/rhdevelopers/quarkus-petclinic:1.0.0'
          # Esto funciona-----
          image: 'quay.io/rhn_gps_splatas/quarkus-petclinic:in-mem-blue-ocp'
          # Esto funciona-----
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          imagePullPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
