lab-01/pgsql.yml
---
apiVersion: v1
kind: Service
metadata:
  #name: postgresql
  name: petclinic-database
spec:
  selector:
    #app: postgresql
    app: petclinic-database
  ports:
    - name: pgsql
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  # name: postgresql
  name: petclinic-database
spec:
  selector:
    matchLabels:
      # app: postgresql
      app: petclinic-database
  template:
    metadata:
      labels:
        # app: postgresql
        app: petclinic-database
    spec:
      containers:
        # - name: postgresql
        - name: petclinic-database
          image: quay.io/redhatdemo/openshift-pgsql12-primary:centos7
          imagePullPolicy: Always
          resources:
            limits:
              memory: "1Gi"
              cpu: "600m"
          ports:
            - name: tcp
              containerPort: 5432
